--- a/frontend/src/Css files/NavbarPage.css
+++ b/frontend/src/Css files/NavbarPage.css
@@ -38,6 +38,19 @@
   .modal-footer button:nth-child(2){
     background-color: var(--color1) !important;
   }
+
+
+  #navlogo {
+    /* border: 2px solid red; */
+
+    position: absolute;
+    background-image: url("../../public/weblogo1.svg");
+    /* background-size: cover;
+    background-repeat: no-repeat; */
+    /* height: 40px; */
+    width: 200px;
+    height: 50px;
+  }
   /*<<<<<<<<<<<<<<<<<<<<< navbar css end  >>>>>>>>>>>>>>>>>>>>>>>>*/
 
 
